--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                             </div>
                             <div class="col text-end">
                                 <div class="row align-items-center">
-                                    <div class="col font-weight-bold text-info text-uppercase mb-1" style="text-align: center;">Latitude</div>
-                                    <div class="col font-weight-bold text-info text-uppercase mb-1" style="text-align: center;">Longitude</div>
+                                    <div class="col font-weight-bold text-info text-uppercase mb-1" style="text-align: center; font-size: 25px;">Latitude</div>
+                                    <div class="col font-weight-bold text-info text-uppercase mb-1" style="text-align: center; font-size: 25px;">Longitude</div>
                                 </div>
                                 <div class="row no-gutters align-items-center">
                                     <div class="col font-weight-bold text-uppercase mb-1" style="text-align: center;" id="lat"></div>
@@ -61,10 +61,10 @@
                     <div class="card-body">
                         <div class="row no-gutters align-items-center">
                             <div class="col p-10">
-                                <i class="bi bi-building fs-5 text-primary pe-3"></i>
+                                <i class="bi bi-building fs-2 text-primary pe-3"></i>
                             </div>
                             <div class="col text-end">
-                                <div class="text-xs font-weight-bold text-primary text-uppercase mb-1">
+                                <div class="text-xs font-weight-bold text-primary text-uppercase mb-1" style="font-size: 25px;">
                                     City</div>
                                 <div class="h5 mb-0 font-weight-bold text-gray-800" id="kota"></div>
                             </div>
@@ -80,7 +80,7 @@
                     <div class="card-body">
                         <div class="row no-gutters align-items-center">
                             <i class=" col-1 bi bi-thermometer fs-2"></i>
-                            <div class="col" ><a style="color: rgb(255, 115, 0); text-align: left; font-size: 20px;">Temperature</a></div>
+                            <div class="col" ><a style="color: rgb(255, 115, 0); text-align: left; font-size: 20px; font-size: 25px;">Temperature</a></div>
                         </div>
                         <br>
                         <div class="row no-gutters align-items-center">
@@ -103,8 +103,8 @@
                     <div class="card-body">
                         <div class="row no-gutters align-items-center">
                             <div class="row align-items-center">
-                                <div class="col font-weight-bold text-primary text-uppercase mb-1 bi bi-moisture" style="text-align: center; font-size: 20px;">   Humidity</div>
-                                <div class="col font-weight-bold text-primary text-uppercase mb-1 bi bi-speedometer" style="text-align: center; font-size: 20px;">    Pressure</div> 
+                                <div class="col font-weight-bold text-primary text-uppercase mb-1 bi bi-moisture" style="text-align: center; font-size: 25px; ">   Humidity</div>
+                                <div class="col font-weight-bold text-primary text-uppercase mb-1 bi bi-speedometer" style="text-align: center; font-size: 25px;">    Pressure</div> 
                             </div>
                             <br><br><br>
                             <div class="row no-gutters align-items-center">
